--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,8 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  # hive قاعدة بيانات تستخدمها لغة dart
+  hive: ^2.2.3
+  # hive_flutter ايكستنشن تستخدمها flutter
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
+  # generator لعمل اكواد ثابتة في flutter ل hive
+  hive_generator: ^2.0.0
+  build_runner: ^2.3.2
   flutter_test:
     sdk: flutter
 
