--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,10 @@ dependencies:
   hive: ^2.2.3
   # hive_flutter ايكستنشن تستخدمها flutter
   hive_flutter: ^1.1.0
+  pubspec: ^2.3.0
+  pubspec_yaml: ^3.1.0
+  flutter_bloc: ^8.1.3
+  
 
 dev_dependencies:
   # generator لعمل اكواد ثابتة في flutter ل hive
